# Multi-Axis_Swivel_Camera_Control

./: README.md
swivel_description/: CMakeLists.txt  package.xml
swivel_description/launch/: swivel_stable.launch  urdf_view.launch
swivel_description/meshes/: Swivel_Base.stl  Swivel_Link_1.stl  Swivel_Link_2.STL  swivel_base.stl  swivel_link1.stl  swivel_link2.stl
swivel_description/model/: common.urdf.xacro  rrbot.urdf.xacro  swivel_test.urdf.xacro  swivel_working.urdf.xacro
swivel_gazebo/: CMakeLists.txt  package.xml
swivel_gazebo/launch/: swivel_world.launch
swivel_simulation/: CMakeLists.txt  gazebo_ros_control_plugins.xml  package.xml
swivel_simulation/launch/: swivel_world.launch
swivel_simulation/model/: .swivel_gazebo.urdf.xacro.swp  swivel_gazebo.urdf.xacro
swivel_simulation/src/: swivel_sim.cpp  swivel_sim.h
