cmake_minimum_required(VERSION 2.8.3)
project(swivel_description)

## find catkin macros & libs
find_package(catkin REQUIRED)


catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES irk_model
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
# include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})

## Declare a cpp library
# add_library(irk_model
#   src/${PROJECT_NAME}/irk_model.cpp
# )

## Declare a cpp executable
# add_executable(irk_model_node src/irk_model_node.cpp)

## Add cmake target dependencies of the executable/library
## as an example, message headers may need to be generated before nodes
# add_dependencies(irk_model_node irk_model_generate_messages_cpp)

## Specify libraries to link a library or executable target against
# target_link_libraries(irk_model_node
#   ${catkin_LIBRARIES}
# )

