<package>
  <name>swivel_simulation</name>
  <version>0.1.0</version>
  <description>swivel_simulation</description>
  <maintainer email="ish.sanchez12@gmail.com">Ish Sanchez</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/isanchez12/Mult-Axis_Swivel_Camera_Control</url>

  <author email="ish.sanchez12@gmail.com">Ish Sanchez</author>
  <author>Ish Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>swivel_description</run_depend>
  

  <export>
  </export>
</package>

